Fix image padding on mobile

--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ footer nav {
     }
 
     section.gallery img {
-        width: 100%;
+        width: calc(100% - 18px);
         margin: 0;
         margin-bottom: 4%;
     }
